--- a/index.html
+++ b/index.html
@@ -2722,7 +2722,7 @@
     color: #4f81bd;
   "
 >
-  12. Why and how we process information across QP Messenger
+  12. Why and how we process information across QPoss Messenger
 </h2>
 <p
   style="
@@ -2735,9 +2735,10 @@
     font-family: 'Cambria', serif;
   "
 >
-  We operate QP Messenger as an integrated messaging feature within the Quantum
-  Possibilities platform. While it shares infrastructure with other services we
-  offer, it remains bound to this Privacy Policy. This integration allows us to:
+  We operate QPoss Messenger as an integrated messaging feature within the
+  Quantum Possibilities platform. While it shares infrastructure with other
+  services we offer, it remains bound to this Privacy Policy. This integration
+  allows us to:
 </p>
 <ul style="margin-bottom: 0in; margin-top: 0in" type="disc">
   <li
@@ -2823,7 +2824,7 @@
       font-family: 'Cambria', serif;
     "
   >
-    Improve the reliability, speed, and user experience of QP Messenger.
+    Improve the reliability, speed, and user experience of QPoss Messenger.
   </li>
   <li
     style="
@@ -2881,7 +2882,8 @@
   "
 >
   These integrations support a consistent user experience across Quantum
-  Possibilities and ensure QP Messenger functions securely and efficiently.<br />&nbsp;<br />&nbsp;<br /><span
+  Possibilities and ensure QPoss Messenger functions securely and
+  efficiently.<br />&nbsp;<br />&nbsp;<br /><span
     style="
       font-family: 'Calibri', sans-serif;
       color: #4f81bd;
@@ -2919,7 +2921,7 @@
   Our application facilitates crypto transactions through WalletConnect,
   supporting over 400 wallets. Upon a successful connection, the public key is
   securely stored in our database. Furthermore, users can link multiple wallets
-  to a single QP account.
+  to a single QPoss account.
 </p>
 <p
   style="
