--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     color: #365f91;
   "
 >
-  Quantum Possibilities Privacy Policy
+  QPoss Privacy Policy
 </h1>
 <p
   style="
@@ -37,7 +37,7 @@
   "
 >
   This Privacy Policy explains how we collect, use, and share your information
-  when you use Quantum Possibilities. It also describes how long we keep your
+  when you use QPoss. It also describes how long we keep your
   information, how we protect it, and how we handle international data
   transfers.
 </p>
@@ -66,7 +66,7 @@
     font-family: 'Cambria', serif;
   "
 >
-  This Privacy Policy applies to Quantum Possibilities and all of its integrated
+  This Privacy Policy applies to QPoss and all of its integrated
   features, including our social media platform, digital marketplace, wallet
   services, and crypto-based tools.
 </p>
@@ -81,7 +81,7 @@
     font-family: 'Cambria', serif;
   "
 >
-  At Quantum Possibilities, we want you to clearly understand what information
+  At QPoss, we want you to clearly understand what information
   we collect, how we use it, and how we share it. That&rsquo;s why we encourage
   you to read our Privacy Policy carefully. Each section includes examples,
   plain language, and helpful context to make our practices easy to understand.
@@ -127,7 +127,7 @@
   "
 >
   In this Privacy Policy, we describe the types of information we collect and
-  process about you, depending on how you use Quantum Possibilities. This
+  process about you, depending on how you use QPoss. This
   includes:
 </p>
 <p
@@ -209,7 +209,7 @@
     font-family: 'Cambria', serif;
   "
 >
-  <strong>B. Your activity and behavior on Quantum Possibilities</strong>
+  <strong>B. Your activity and behavior on QPoss</strong>
 </p>
 <p
   style="
@@ -1336,7 +1336,7 @@
     margin-left: 0.25in;
   "
 >
-  - Marketing partners we hire to promote Quantum Possibilities
+  - Marketing partners we hire to promote QPoss
 </p>
 <p
   style="
@@ -2531,7 +2531,7 @@
     font-family: 'Cambria', serif;
   "
 >
-  We share information across Quantum Possibilities to provide a seamless
+  We share information across QPoss to provide a seamless
   experience across products and services.
 </p>
 <p
@@ -2736,7 +2736,7 @@
   "
 >
   We operate QPoss Messenger as an integrated messaging feature within the
-  Quantum Possibilities platform. While it shares infrastructure with other
+  QPoss platform. While it shares infrastructure with other
   services we offer, it remains bound to this Privacy Policy. This integration
   allows us to:
 </p>
@@ -2960,7 +2960,7 @@
     font-family: 'Cambria', serif;
   "
 >
-  When a user initiates the minting of the Quantum Possibilities Gold Coin, a
+  When a user initiates the minting of the QPoss Gold Coin, a
   gold-pegged stablecoin backed by real-time gold pricing, we collect and
   process specific transaction data to facilitate the minting process securely
   and transparently.
