--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
   "
 >
   This Privacy Policy explains how we collect, use, and share your information
-  when you use QPoss. It also describes how long we keep your
-  information, how we protect it, and how we handle international data
-  transfers.
+  when you use QPoss. It also describes how long we keep your information, how
+  we protect it, and how we handle international data transfers.
 </p>
 <p
   style="
@@ -66,9 +65,9 @@
     font-family: 'Cambria', serif;
   "
 >
-  This Privacy Policy applies to QPoss and all of its integrated
-  features, including our social media platform, digital marketplace, wallet
-  services, and crypto-based tools.
+  This Privacy Policy applies to QPoss and all of its integrated features,
+  including our social media platform, digital marketplace, wallet services, and
+  crypto-based tools.
 </p>
 <p
   style="
@@ -81,10 +80,10 @@
     font-family: 'Cambria', serif;
   "
 >
-  At QPoss, we want you to clearly understand what information
-  we collect, how we use it, and how we share it. That&rsquo;s why we encourage
-  you to read our Privacy Policy carefully. Each section includes examples,
-  plain language, and helpful context to make our practices easy to understand.
+  At QPoss, we want you to clearly understand what information we collect, how
+  we use it, and how we share it. That&rsquo;s why we encourage you to read our
+  Privacy Policy carefully. Each section includes examples, plain language, and
+  helpful context to make our practices easy to understand.
 </p>
 <p
   style="
@@ -127,8 +126,7 @@
   "
 >
   In this Privacy Policy, we describe the types of information we collect and
-  process about you, depending on how you use QPoss. This
-  includes:
+  process about you, depending on how you use QPoss. This includes:
 </p>
 <p
   style="
@@ -2531,8 +2529,8 @@
     font-family: 'Cambria', serif;
   "
 >
-  We share information across QPoss to provide a seamless
-  experience across products and services.
+  We share information across QPoss to provide a seamless experience across
+  products and services.
 </p>
 <p
   style="
@@ -2735,10 +2733,9 @@
     font-family: 'Cambria', serif;
   "
 >
-  We operate QPoss Messenger as an integrated messaging feature within the
-  QPoss platform. While it shares infrastructure with other
-  services we offer, it remains bound to this Privacy Policy. This integration
-  allows us to:
+  We operate QPoss Messenger as an integrated messaging feature within the QPoss
+  platform. While it shares infrastructure with other services we offer, it
+  remains bound to this Privacy Policy. This integration allows us to:
 </p>
 <ul style="margin-bottom: 0in; margin-top: 0in" type="disc">
   <li
@@ -2960,10 +2957,9 @@
     font-family: 'Cambria', serif;
   "
 >
-  When a user initiates the minting of the QPoss Gold Coin, a
-  gold-pegged stablecoin backed by real-time gold pricing, we collect and
-  process specific transaction data to facilitate the minting process securely
-  and transparently.
+  When a user initiates the minting of the QPoss Gold Coin, a gold-pegged
+  stablecoin backed by real-time gold pricing, we collect and process specific
+  transaction data to facilitate the minting process securely and transparently.
 </p>
 <p
   style="
