--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
     font-family: 'Cambria', serif;
   "
 >
-  <strong>- Third-Party Info:</strong> Even if you&apos;re not a Quantum
-  Possibilities user, your information might be collected if it&rsquo;s shared
-  with us by users syncing contacts.
+  <strong>- Third-Party Info:</strong> Even if you&apos;re not a QPoss user,
+  your information might be collected if it&rsquo;s shared with us by users
+  syncing contacts.
 </p>
 <p
   style="
@@ -2119,8 +2119,8 @@
 >
   Our systems automatically process information we collect and store associated
   with you and others to assess and understand your interests and your
-  preferences and provide you with personalised experiences across the Quantum
-  Possibilities platform in accordance with our terms. This includes:
+  preferences and provide you with personalised experiences across the QPoss
+  platform in accordance with our terms. This includes:
 </p>
 <p
   style="
@@ -2878,9 +2878,8 @@
     font-family: 'Cambria', serif;
   "
 >
-  These integrations support a consistent user experience across Quantum
-  Possibilities and ensure QPoss Messenger functions securely and
-  efficiently.<br />&nbsp;<br />&nbsp;<br /><span
+  These integrations support a consistent user experience across QPoss and
+  ensure QPoss Messenger functions securely and efficiently.<br />&nbsp;<br />&nbsp;<br /><span
     style="
       font-family: 'Calibri', sans-serif;
       color: #4f81bd;
